--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 
   <style>
+    html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       background-color: #fff;
@@ -37,6 +41,15 @@
       overflow: hidden;
       text-align: center;
     }
+
+    .hero video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
     .hero h1 {
       font-size: 4rem;
       text-shadow: 0 4px 12px rgba(0,0,0,0.6);
@@ -176,7 +189,7 @@
 <header class="hero d-flex flex-column justify-content-center align-items-center">
   <!-- Background Video -->
   <video autoplay muted loop playsinline class="position-absolute w-100 h-100" style="object-fit: cover; z-index:-2;">
-    <source src="5793218-uhd_3840_2160_25fps.mp4" type="video/mp4">
+    <source src="physiozen-hero-video.mp4" type="video/mp4">
   </video>
 
   <!-- Dark Overlay -->
