--- a/index.html
+++ b/index.html
@@ -189,18 +189,15 @@
 <header class="hero d-flex flex-column justify-content-center align-items-center">
   <!-- Background Video -->
   <video autoplay muted loop playsinline preload="auto"
-       poster="clinic-poster.jpg"
        class="position-absolute w-100 h-100"
        style="object-fit: cover; z-index:-1;">
-  
-  <!-- WebM version (preferred by Chrome/Android) -->
-  <source src="https://res.cloudinary.com/dyzclnlvd/video/upload/v1757938365/freecompress-physiozen-hero-video_ung0nu.webm" type="video/webm">
-
-  <!-- MP4 version (works everywhere else, including iOS Safari) -->
-  <source src="https://res.cloudinary.com/dyzclnlvd/video/upload/v1757938365/freecompress-physiozen-hero-video_ung0nu.mp4" type="video/mp4">
-
+  <!-- MP4 fallback -->
+  <source src="https://res.cloudinary.com/dyzclnlvd/video/upload/f_auto,q_auto/v1757938365/freecompress-physiozen-hero-video_ung0nu.mp4" type="video/mp4">
+  <!-- WEBM version (optional, Cloudinary can generate automatically if set) -->
+  <source src="https://res.cloudinary.com/dyzclnlvd/video/upload/f_auto,q_auto/v1757938365/freecompress-physiozen-hero-video_ung0nu.webm" type="video/webm">
   Your browser does not support the video tag.
 </video>
+
 
 
 
