--- a/index.html
+++ b/index.html
@@ -188,15 +188,11 @@
 <!-- Hero with Responsive Video Background -->
 <header class="hero d-flex flex-column justify-content-center align-items-center">
   <!-- Background Video -->
-  <video autoplay muted loop playsinline preload="auto"
-       class="position-absolute w-100 h-100"
-       style="object-fit: cover; z-index:-1;">
-  <!-- MP4 fallback -->
-  <source src="https://res.cloudinary.com/dyzclnlvd/video/upload/f_auto,q_auto/v1757938365/freecompress-physiozen-hero-video_ung0nu.mp4" type="video/mp4">
-  <!-- WEBM version (optional, Cloudinary can generate automatically if set) -->
-  <source src="https://res.cloudinary.com/dyzclnlvd/video/upload/f_auto,q_auto/v1757938365/freecompress-physiozen-hero-video_ung0nu.webm" type="video/webm">
-  Your browser does not support the video tag.
+  <video autoplay muted loop playsinline class="position-absolute w-100 h-100" style="object-fit: cover; z-index:-1;">
+  <source src="https://res.cloudinary.com/dyzclnlvd/video/upload/v1757938365/freecompress-physiozen-hero-video_ung0nu.webm" type="video/webm">
+  <source src="https://res.cloudinary.com/dyzclnlvd/video/upload/v1757938365/freecompress-physiozen-hero-video_ung0nu.mp4" type="video/mp4">
 </video>
+
 
 
 
@@ -249,10 +245,12 @@
 <!-- Doctor -->
 <section class="bg-light py-5 text-center" data-aos="fade-up">
   <h2 class="mb-4">Meet Our Doctor</h2>
-  <img src="doctor.png" 
-       class="rounded-circle shadow-lg img-fluid" 
-       alt="Doctor" 
-       style="max-width: 220px; height: auto;">
+  <img src="doctor.webp" 
+     class="rounded-circle shadow-lg img-fluid" 
+     alt="Doctor" 
+     style="max-width: 220px; height: auto;" 
+     loading="lazy">
+
   <h4 class="mt-3">Dr. Rudraksh Sharma (PT)</h4>
   <p class="text-muted" style="max-width: 600px; margin: 0 auto;">
     Specialist in Sports Injury, Post-Surgical and Neurological Physiotherapy. 
