Added dual video format (WebM + MP4) for hero background

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 <!-- Doctor -->
 <section class="bg-light py-5 text-center" data-aos="fade-up">
   <h2 class="mb-4">Meet Our Doctor</h2>
-  <img src="doctor.webp" 
+  <img src="doctor.jpg" 
      class="rounded-circle shadow-lg img-fluid" 
      alt="Doctor" 
      style="max-width: 220px; height: auto;" 
