--- a/index.html
+++ b/index.html
@@ -246,11 +246,9 @@
 <section class="bg-light py-5 text-center" data-aos="fade-up">
   <h2 class="mb-4">Meet Our Doctor</h2>
   <img src="doctor.jpg" 
-     class="rounded-circle shadow-lg img-fluid" 
-     alt="Doctor" 
-     style="max-width: 220px; height: auto;" 
-     loading="lazy">
-
+       class="rounded-circle shadow-lg img-fluid" 
+       alt="Doctor" 
+       style="max-width: 220px; height: auto;">
   <h4 class="mt-3">Dr. Rudraksh Sharma (PT)</h4>
   <p class="text-muted" style="max-width: 600px; margin: 0 auto;">
     Specialist in Sports Injury, Post-Surgical and Neurological Physiotherapy. 
