Added dual video format (WebM + MP4) for hero background

--- a/index.html
+++ b/index.html
@@ -209,36 +209,35 @@
   </div>
 </header>
 
+
 <!-- About -->
 <section class="container my-5" id="about">
   <div class="row align-items-center">
     
-    <!-- Image -->
-    <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
-      <img src="clinic.png" 
-           class="img-fluid rounded-4 shadow-lg about-img" 
-           alt="PhysioZen Clinic">
+    <!-- Image on the left -->
+    <div class="col-md-6" data-aos="fade-right">
+      <img src="clinic.png" class="img-fluid rounded shadow" alt="Clinic">
     </div>
-
-    <!-- Content -->
-    <div class="col-lg-6 text-lg-start text-center" data-aos="fade-left">
-      <h2 class="fw-bold mb-4">About Us</h2>
-      <p class="lead text-dark mb-3">
-        At <strong>PhysioZen</strong>, we specialize in personalized physiotherapy services 
-        that blend expert clinical care with a modern, patient-focused approach.
+    
+    <!-- Text on the right -->
+    <div class="col-md-6" data-aos="fade-left">
+      <h2 class="mb-3">About Us</h2>
+      <p>
+        At <strong>PhysioZen</strong>, we specialize in providing personalized physiotherapy services that combine expert 
+        clinical care with a holistic, patient-centered approach.
       </p>
-      <p class="text-muted fs-5">
-        Our mission is to help individuals of all ages recover from injuries, 
-        reduce pain, improve mobility, and achieve peak well-being. 
-        With a team of highly skilled physiotherapists, we deliver evidence-based 
+      <p>
+        Our mission is to help individuals of all ages recover from injuries, reduce pain, improve mobility, and 
+        enhance overall well-being. With a team of licensed and experienced physiotherapists, we deliver evidence-based 
         treatments tailored to your unique needs.
       </p>
-      <a href="#services" class="btn btn-primary px-4 py-2 mt-3 btn-lg shadow-sm">
-        <i class="bi bi-arrow-right-circle"></i> Explore Our Services
-      </a>
+      <a href="#services" class="btn btn-primary mt-3">Explore Our Services</a>
     </div>
+
   </div>
 </section>
+
+
 
 
 
