Fix: updated hero video with Cloudinary link for iOS autoplay

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     
     <!-- Image on the left -->
     <div class="col-md-6" data-aos="fade-right">
-      <img src="clinic.png" class="img-fluid rounded shadow" alt="Clinic">
+      <img src="ChatGPT Image Sep 16, 2025, 05_35_55 PM.png" class="img-fluid rounded shadow" alt="Clinic">
     </div>
     
     <!-- Text on the right -->
@@ -313,6 +313,7 @@
           <option>Post-Surgical Physiotherapy</option>
           <option>Neurological Physiotherapy</option>
           <option>Geriatric & Pediatric Physiotherapy</option>
+          <option>Others</option>
         </select>
       </div>
       <div class="mb-3">
