--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     
     <!-- Image on the left -->
     <div class="col-lg-6 d-flex justify-content-center" data-aos="fade-right">
-      <img src="clinic.png" 
+      <img src="picture 3.jpg" 
            class="img-fluid rounded shadow-lg about-img" 
            alt="Clinic">
     </div>
