--- a/index.html
+++ b/index.html
@@ -250,34 +250,218 @@
 
 <!-- Services -->
 <section id="services" class="container text-center">
-  <h2 data-aos="fade-up">Our Services</h2>
-  <div class="row g-4">
-    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
-      <div class="card service-card p-4">
-        <i class="bi bi-heart-pulse fs-1 text-primary"></i>
-        <h5 class="mt-3">Orthopaedic & Sports Injury Rehab</h5>
+  <h2 data-aos="fade-up" class="mb-5">Our Services</h2>
+  <div class="row g-4 justify-content-center">
+
+    <!-- 1. Orthopaedic -->
+    <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <!-- Front -->
+          <div class="flip-card-front">
+            <i class="fas fa-bone fs-1 text-primary"></i>
+            <h5 class="mt-3 fw-bold">Orthopaedic Physiotherapy</h5>
+          </div>
+          <!-- Back -->
+          <div class="flip-card-back">
+            <h6 class="card-title">Orthopaedic Physiotherapy</h6>
+            <p class="small">Recover from bone, joint & muscle issues with pain relief and improved mobility.</p>
+            <ul>
+              <li>Osteoarthritis (knee, hip, shoulder)</li>
+              <li>Cervical & lumbar spondylosis</li>
+              <li>Frozen shoulder</li>
+              <li>Rotator cuff injuries</li>
+              <li>Tennis & Golfer’s elbow</li>
+              <li>Carpal tunnel syndrome</li>
+              <li>Post-fracture rehabilitation</li>
+              <li>Knee ligament injuries (ACL, PCL, Meniscus)</li>
+              <li>Plantar fasciitis, heel pain, sciatica</li>
+              <li>Post-surgical rehab</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-delay="200">
-      <div class="card service-card p-4">
-        <i class="bi bi-person-hearts fs-1 text-success"></i>
-        <h5 class="mt-3">Post-Surgical Physiotherapy</h5>
+
+    <!-- 2. Neurological -->
+    <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <i class="fas fa-brain fs-1 text-danger"></i>
+            <h5 class="mt-3 fw-bold">Neurological Physiotherapy</h5>
+          </div>
+          <div class="flip-card-back">
+            <h6 class="card-title">Neurological Physiotherapy</h6>
+            <p class="small">Specialized care to restore movement, coordination, and independence.</p>
+            <ul>
+              <li>Stroke (CVA) rehab</li>
+              <li>Parkinson’s disease</li>
+              <li>Spinal cord injuries</li>
+              <li>Cerebral palsy, MS</li>
+              <li>Bell’s palsy</li>
+              <li>GBS, Muscular dystrophy</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
-      <div class="card service-card p-4">
-        <i class="fas fa-brain fs-1 text-danger"></i>
-        <h5 class="mt-3">Neurological Physiotherapy</h5>
+
+    <!-- 3. Sports -->
+    <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <i class="fas fa-running fs-1 text-success"></i>
+            <h5 class="mt-3 fw-bold">Sports Physiotherapy</h5>
+          </div>
+          <div class="flip-card-back">
+            <h6 class="card-title">Sports Physiotherapy</h6>
+            <p class="small">Injury prevention, faster recovery, and peak performance.</p>
+            <ul>
+              <li>ACL / PCL & Meniscus injuries</li>
+              <li>Hamstring, calf strains</li>
+              <li>Rotator cuff injuries</li>
+              <li>Runner’s knee, Shin splints</li>
+              <li>Achilles tendinitis</li>
+              <li>Post-surgical sports rehab</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
-      <div class="card service-card p-4">
-        <i class="bi bi-people fs-1 text-warning"></i>
-        <h5 class="mt-3">Geriatric & Pediatric Physiotherapy</h5>
+
+    <!-- 4. Geriatric -->
+    <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <i class="fas fa-wheelchair fs-1 text-warning"></i>
+            <h5 class="mt-3 fw-bold">Geriatric Physiotherapy</h5>
+          </div>
+          <div class="flip-card-back">
+            <h6 class="card-title">Geriatric Physiotherapy</h6>
+            <p class="small">Tailored programs for elderly health and mobility.</p>
+            <ul>
+              <li>Post-joint replacement rehab</li>
+              <li>Balance & fall prevention</li>
+              <li>Back & neck pain</li>
+              <li>Post-surgical recovery</li>
+              <li>Mobility improvement</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
+
+    <!-- 5. Paediatric -->
+    <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-delay="500">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <i class="fas fa-baby fs-1 text-info"></i>
+            <h5 class="mt-3 fw-bold">Paediatric Physiotherapy</h5>
+          </div>
+          <div class="flip-card-back">
+            <h6 class="card-title">Paediatric Physiotherapy</h6>
+            <p class="small">Gentle care designed for children’s growth & recovery.</p>
+            <ul>
+              <li>Cerebral palsy (CP)</li>
+              <li>Muscular dystrophy</li>
+              <li>Clubfoot, Spina bifida</li>
+              <li>Brachial plexus injury</li>
+              <li>Autism-related motor issues</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </section>
+
+<!-- Flip Card CSS -->
+<style>
+  .flip-card {
+    perspective: 1000px;
+    cursor: pointer;
+    height: 280px;
+  }
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+    transform-style: preserve-3d;
+  }
+  .flip-card.flip .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  .flip-card-front,
+  .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    backface-visibility: hidden;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.1);
+    padding: 20px;
+  }
+  .flip-card-front {
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .flip-card-back {
+    background: linear-gradient(135deg, #ffffff, #f8faff);
+    transform: rotateY(180deg);
+    text-align: left;
+    overflow-y: auto;
+  }
+  .flip-card-back h6.card-title {
+    font-size: 1rem;
+    font-weight: 700;
+    margin-bottom: 8px;
+    color: #007bff;
+  }
+  .flip-card-back p {
+    font-size: 0.9rem;
+    color: #555;
+  }
+  .flip-card-back ul {
+    padding-left: 15px;
+    margin-top: 8px;
+  }
+  .flip-card-back ul li {
+    margin-bottom: 6px;
+    font-size: 0.9rem;
+    color: #333;
+    position: relative;
+  }
+  .flip-card-back ul li::before {
+    content: "✔";
+    color: #007bff;
+    font-weight: bold;
+    margin-right: 6px;
+  }
+</style>
+
+<script>
+  const isMobile = window.matchMedia("(max-width: 768px)").matches;
+  document.querySelectorAll(".flip-card").forEach(card => {
+    if (isMobile) {
+      card.addEventListener("click", () => card.classList.toggle("flip"));
+    } else {
+      card.addEventListener("mouseenter", () => card.classList.add("flip"));
+      card.addEventListener("mouseleave", () => card.classList.remove("flip"));
+    }
+  });
+</script>
+
+
+
 
 <!-- Appointment -->
 <section id="appointment">
