--- a/index.html
+++ b/index.html
@@ -215,55 +215,78 @@
 
 
   <!-- About -->
-  <section class="container my-5" id="about">
-    <div class="row align-items-center g-4">
+  <!-- About -->
+<section class="container my-5" id="about">
+  <div class="row align-items-center g-4">
 
-      <!-- Image on the left -->
-      <div class="col-lg-6 d-flex justify-content-center" data-aos="fade-right">
-        <img src="picture 4.jpg" class="img-fluid rounded shadow-lg about-img" alt="Clinic">
-      </div>
-
-      <!-- Text on the right -->
-      <div class="col-lg-6 d-flex flex-column justify-content-center text-center text-lg-start" data-aos="fade-left">
-        <h2 class="mb-3 mt-2">About <span class="text-primary">PhysioZen</span></h2>
-        <p class="fs-5 text-muted mb-3">
-          At <strong>PhysioZen</strong>, we specialize in providing personalized physiotherapy services
-          that combine expert clinical care with a holistic, patient-centered approach.
-        </p>
-        <p class="fs-5 text-muted mb-4">
-          Our mission is to help individuals of all ages recover from injuries, reduce pain,
-          improve mobility, and enhance overall well-being. With a team of licensed and experienced
-          physiotherapists, we deliver evidence-based treatments tailored to your unique needs.
-        </p>
-        <div>
-          <a href="#services" class="btn btn-primary px-4 py-2">Explore Our Services</a>
+    <!-- Image Carousel (left side) -->
+    <div class="col-lg-6 d-flex justify-content-center" data-aos="fade-right">
+      <div id="aboutCarousel" class="carousel slide shadow-lg rounded" data-bs-ride="carousel">
+        <div class="carousel-inner rounded">
+          <div class="carousel-item active">
+            <img src="picture 1.jpg" class="d-block w-100 about-img" alt="Clinic 1">
+          </div>
+          <div class="carousel-item">
+            <img src="picture 2.jpg" class="d-block w-100 about-img" alt="Clinic 2">
+          </div>
+          <div class="carousel-item">
+            <img src="picture 3.jpg" class="d-block w-100 about-img" alt="Clinic 3">
+          </div>
+          <div class="carousel-item">
+            <img src="picture 4.jpg" class="d-block w-100 about-img" alt="Clinic 4">
+          </div>
         </div>
-      </div>
 
+        <!-- Carousel controls -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#aboutCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#aboutCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+      </div>
     </div>
-  </section>
+
+    <!-- Text on the right -->
+    <div class="col-lg-6 d-flex flex-column justify-content-center text-center text-lg-start" data-aos="fade-left">
+      <h2 class="mb-3 mt-2">About <span class="text-primary">PhysioZen</span></h2>
+      <p class="fs-5 text-muted mb-3">
+        At <strong>PhysioZen</strong>, we specialize in providing personalized physiotherapy services 
+        that combine expert clinical care with a holistic, patient-centered approach.
+      </p>
+      <p class="fs-5 text-muted mb-4">
+        Our mission is to help individuals of all ages recover from injuries, reduce pain, 
+        improve mobility, and enhance overall well-being. With a team of licensed and experienced 
+        physiotherapists, we deliver evidence-based treatments tailored to your unique needs.
+      </p>
+      <div>
+        <a href="#services" class="btn btn-primary px-4 py-2">Explore Our Services</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
   <style>
-    /* Responsive About Image */
     .about-img {
       max-height: 400px;
-      /* reduced slightly */
       object-fit: cover;
-      margin-bottom: 15px;
-      /* tighter gap */
     }
 
-    @media (max-width: 768px) {
-      .about-img {
-        max-height: 280px;
-        /* mobile-friendly size */
-      }
+    #aboutCarousel {
+      max-width: 500px; /* adjust image container width */
+      margin-left: -30px; /* ✨ shifts slightly left */
+      border-radius: 18px;
+      overflow: hidden;
     }
 
-    #about h2 {
-      margin-top: 0;
-      /* kills unnecessary space */
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 50%;
     }
+
   </style>
 
 
@@ -282,26 +305,29 @@
       </div>
 
       <!-- Doctor Info -->
-      <h4 class="fw-bold mt-3">Dr. Rudraksh Sharma (PT)</h4>
-      <p class="text-muted mb-2">
-        <span class="badge bg-primary me-1">BPT</span>
-        <span class="badge bg-success me-1">CCTS</span>
-        <span class="badge bg-info text-dark me-1">CON</span>
-        <span class="badge bg-warning text-dark me-1">Certified ACLS</span>
-        <span class="badge bg-danger me-1">Certified BLS</span>
-      </p>
+<h4 class="fw-bold mt-3">Dr. Rudraksh Sharma (PT)</h4>
+<p class="text-muted mb-2">
+  <span class="badge bg-primary me-1">BPT</span>
+  <span class="badge bg-success me-1">CCTS</span>
+  <span class="badge bg-info text-dark me-1">CON</span>
+  <span class="badge bg-warning text-dark me-1">Certified ACLS</span>
+  <span class="badge bg-danger me-1">Certified BLS</span>
+  <span class="badge" style="background: linear-gradient(135deg, #0052cc, #007bff); color: #fff; font-weight: 600;"> Certified Sports Physiotherapist (Rajasthan Royals)</span>
 
-      <p class="text-muted mx-auto" style="max-width: 750px; line-height: 1.8; font-size: 1rem;">
-        Founder & Consultant Physiotherapist – <strong>PhysioZen Physiotherapy Centre</strong>.
-        Dr. Rudraksh Sharma is a dedicated physiotherapist with expertise in managing
-        musculoskeletal, neurological, and post-surgical conditions.
-        With advanced certifications in ACLS, BLS, CCTS, and CON, he blends clinical excellence
-        with a compassionate, patient-centered approach.
-        His mission is to help individuals regain mobility, recover from injuries, and
-        live healthier, pain-free lives through evidence-based physiotherapy practices.
-      </p>
-    </div>
-  </section>
+
+</p>
+
+<p class="text-muted mx-auto" style="max-width: 750px; line-height: 1.8; font-size: 1rem;">
+  Founder & Consultant Physiotherapist – <strong>PhysioZen Physiotherapy Centre</strong>.<br>
+  Dr. Rudraksh Sharma is a highly qualified and compassionate physiotherapist with expertise in 
+  musculoskeletal, neurological, and post-surgical rehabilitation. 
+  As a <strong>Certified Sports Physiotherapist with Rajasthan Royals (IPL)</strong>, he brings elite-level 
+  experience in sports injury management, recovery, and performance optimization.<br><br>
+  With advanced certifications in ACLS, BLS, CCTS, and CON, he combines clinical excellence with 
+  a patient-centered approach. His mission is to help individuals regain mobility, recover from injuries, 
+  and lead healthier, pain-free lives through evidence-based physiotherapy practices.
+</p>
+
 
 
 
@@ -620,7 +646,8 @@
           <div class="shadow-lg rounded-4 overflow-hidden border" style="border:1px solid #e5e5e5;">
             <div class="ratio ratio-16x9">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.477431820269!2d75.7390373!3d26.8535855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db51f7f74e8f7%3A0x3d6f152ec76e9b7f!2sPhysioZen%20Physiotherapy%20Centre!5e0!3m2!1sen!2sin!4v1695200000000!5m2!1sen!2sin"
+                 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.487540560181!2d75.7412264754258!3d26.853297176699516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db56b7011bbe3%3A0x6ebbf6243aff37c!2sPhysioZen%20Physiotherapy%20centre!5e0!3m2!1sen!2sin!4v1726665080000!5m2!1sen!2sin"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
               </iframe>
