Fix: updated hero video with Cloudinary link for iOS autoplay

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <div class="mb-3"><input type="text" name="name" class="form-control" placeholder="Your Name" required></div>
       <div class="mb-3"><input type="email" name="email" class="form-control" placeholder="Your Email" required></div>
       <div class="mb-3"><input type="tel" name="phone" class="form-control" placeholder="Your Phone" required></div>
-      <div class="mb-3"><select name="service" class="form-select" required><option value="">Select Service</option><option>Orthopaedic Physiotherapy</option><option>Neurological Physiotherapy</option><option>Sports Physiotherapy</option><option>Geriatric Physiotherapy</option><option>Paediatric Physiotherapy</option></select></div>
+      <div class="mb-3"><select name="service" class="form-select" required><option value="">Select Service</option><option>Orthopaedic Physiotherapy</option><option>Neurological Physiotherapy</option><option>Sports Physiotherapy</option><option>Geriatric Physiotherapy</option><option>Paediatric Physiotherapy</option><option>Other</option></select></div>
       <div class="mb-3"><textarea name="message" class="form-control" placeholder="Your Message"></textarea></div>
       <button type="submit" class="btn btn-primary w-100">Submit</button>
     </form>
