Fix: updated hero video with Cloudinary link for iOS autoplay

--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
         <p class="mb-3"><i class="bi bi-geo-alt me-2 text-primary"></i> Jaipur, Rajasthan</p>
         <div>
           <a href="https://wa.me/918209442127" class="btn btn-outline-primary btn-sm rounded-circle me-2"><i class="bi bi-whatsapp"></i></a>
-          <a href="#" class="btn btn-outline-primary btn-sm rounded-circle me-2"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="btn btn-outline-primary btn-sm rounded-circle"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/share/19dpQ4XVBi/?mibextid=wwXIfr" class="btn btn-outline-primary btn-sm rounded-circle me-2"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/dr.rudraksh_?igsh=MTB3NnVhdjd5bW5vcQ%3D%3D&utm_source=qr" class="btn btn-outline-primary btn-sm rounded-circle"><i class="bi bi-instagram"></i></a>
         </div>
       </div>
 
